--- a/recaptcha-v2/package.json
+++ b/recaptcha-v2/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6"
   }
