--- a/recaptcha-v2/package.json
+++ b/recaptcha-v2/package.json
@@ -8,8 +8,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "isomorphic-fetch": "^3.0.0"
   }
 }
